docs(dw4): add Spells and Enemies wiki pages
Spells.wikitext:
- Action code ranges and categories
- Spell effect table at $b80b
- Complete spell lists with effect bytes
- Power/attribute tables at $bb3f, $bb49

Enemies.wikitext:
- 27-byte monster record structure
- Metal flags (byte 22)
- Drop rate encoding (byte 23)
- Status vulnerability patterns (byte 24)
- Enemy categories (Metal, Sleepy, Confused)

Refs #7

--- a/Wiki/NES/Dragon_Warrior_IV/index.wikitext
+++ b/Wiki/NES/Dragon_Warrior_IV/index.wikitext
@@ -128,6 +128,8 @@ Temporary party members that join in specific chapters:
 * [[Dragon Warrior IV:Map_List|Map List]] - Location ID reference
 * [[Dragon Warrior IV:Battle_System|Battle System]] - AI tactics and combat mechanics
 * [[Dragon Warrior IV:EXP_System|EXP System]] - Experience calculation formulas
+* [[Dragon Warrior IV:Spells|Spells]] - Magic system and spell tables
+* [[Dragon Warrior IV:Enemies|Enemies]] - Monster data structure and categories
 
 ==Known Dumps==
 
